examples/type_system/failing/39_effect_alias_print_in_pure_function.flx
// E400: aliasing `print` must not bypass IO effect checks in pure functions.

fn f() -> Int {
    let p = print
    p("hi")
    1
}

fn main() -> Unit with IO {
    f();
}
